--- a/index.html
+++ b/index.html
@@ -377,13 +377,15 @@
       }
 
       .floating-footnote .footer-icons {
-        justify-content: flex-start;
-        margin: 0 0 0.3rem 0;
+        justify-content: center;
+        margin: 0 auto 0.3rem auto;
+        display: flex;
       }
 
       .floating-footnote .footer-actions {
-        justify-content: flex-end;
-        margin: 0.3rem 0 0 0;
+        justify-content: center;
+        margin: 0.3rem auto 0 auto;
+        display: flex;
       }
     }
 
